--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,18 @@
 [project]
 name = "comfyui-noembryo"
-description = "PromptTermList (1-6): are some nodes that help with the creation of Prompts inside ComfyUI. Resolution Scale outputs image dimensions using a scale factor. Regex Text Chopper outputs the chopped parts of a text using RegEx."
+description = """
+A collection of nodes for ComyUI.
+* "PromptTermList (1-6)" nodes to help with the creation of Prompts.
+* "Resolution Scale" is a node that resizes an image using pixels or scale factor.
+* "Regex Text Chopper" is a node that cuts text based on regex."""
 version = "1.0.0"
-license = "LICENSE"
+license = "MIT"
 
 [project.urls]
 Repository = "https://github.com/noembryo/ComfyUI-noEmbryo"
 #  Used by Comfy Registry https://comfyregistry.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "noEmbryo"
 DisplayName = "ComfyUI-noEmbryo"
 Icon = ""
