--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,9 @@
 name = "comfyui-noembryo"
 description = """
 A collection of nodes for ComyUI.
-* "PromptTermList (1-6)" nodes to help with the creation of Prompts.
-* "Resolution Scale" is a node that resizes an image using pixels or scale factor.
-* "Regex Text Chopper" is a node that cuts text based on regex."""
+- "PromptTermList (1-6)" nodes to help with the creation of Prompts.
+- "Resolution Scale" is a node that resizes an image using pixels or scale factor.
+- "Regex Text Chopper" is a node that cuts text based on regex."""
 version = "0.8.0"
 license = "MIT"
 
