--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ A collection of nodes for ComyUI.
 - "PromptTermList (1-6)" nodes to help with the creation of Prompts.
 - "Resolution Scale" is a node that resizes an image using pixels or scale factor.
 - "Regex Text Chopper" is a node that cuts text based on regex."""
-version = "1.0.1"
-license = "MIT"
+version = "1.0.2"
+license = {text = "MIT License"}
 
 [project.urls]
 Repository = "https://github.com/noembryo/ComfyUI-noEmbryo"
